<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/primera_pregunta" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_verdadero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_verdadero"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_trampa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_trampa"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_falso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_falso"
            android:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_navigate_before_black_24dp"
            android:drawableLeft="@drawable/ic_navigate_before_black_24dp"
            android:drawablePadding="4dp"
            android:text="@string/btn_atras"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:drawableRight="@drawable/ic_navigate_next_black_24dp"
            android:drawablePadding="4dp"
            android:text="@string/btn_adelante"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>


